--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /B3Sslot4slot5/dist/
 /PacificRimRobot/nbproject/private/
 /PacificRimRobot/build/
+/B3Sslot4slot5slot6slot7slot8/nbproject/private/
