--- a/B3Sslot4slot5slot6slot7slot8/nbproject/project.properties
+++ b/B3Sslot4slot5slot6slot7slot8/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.sqljdbc4-2.0.jar=D:\\Java\\sqljdbc4-2.0.jar
+file.reference.sqljdbc4-2.0.jar=../../Java/sqljdbc4-2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -79,6 +79,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=B3Sslot4slot5.war
+war.name=B3Sslot4slot5slot6slot7slot8.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
