--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /PacificRimRobot/nbproject/private/
 /PacificRimRobot/build/
 /B3Sslot4slot5slot6slot7slot8/nbproject/private/
+/B3Sslot9slot10/nbproject/private/
+/B3Sslot9slot10/build/
