--- a/PacificRimRobot/web/WEB-INF/web.xml
+++ b/PacificRimRobot/web/WEB-INF/web.xml
@@ -14,6 +14,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>org.apache.struts2.dispatcher.FilterDispatcher</welcome-file>
     </welcome-file-list>
 </web-app>
