--- a/PacificRimRobot/web/WEB-INF/web.xml
+++ b/PacificRimRobot/web/WEB-INF/web.xml
@@ -3,6 +3,10 @@
     <filter>
         <filter-name>struts2</filter-name>
         <filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
+        <init-param>
+            <param-name>actionPackages</param-name>
+            <param-value>pacific.struts</param-value>
+        </init-param>
     </filter>
     <filter-mapping>
         <filter-name>struts2</filter-name>
@@ -14,6 +18,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>org.apache.struts2.dispatcher.FilterDispatcher</welcome-file>
+        <welcome-file></welcome-file>
     </welcome-file-list>
 </web-app>
