--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 /B3Sslot4slot5slot6slot7slot8/nbproject/private/
 /B3Sslot9slot10/nbproject/private/
 /B3Sslot9slot10/build/
+/B3Sslot10/nbproject/private/
+/B3Sslot12/nbproject/private/
+/B3Sslot12/build/
+/B3Sslot12/dist/
