--- a/Struts2/nbproject/private/private.properties
+++ b/Struts2/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=/home/dragneol/.netbeans/8.2/tomcat80.properties
+deploy.ant.properties.file=C:\\Users\\DuongPTHSE62871\\AppData\\Roaming\\NetBeans\\8.2\\tomcat90.properties
 j2ee.server.domain=/home/dragneol/.netbeans/8.2/apache-tomcat-8.0.27.0_base
-j2ee.server.home=/home/dragneol/App/apache-tomcat-8.0.27
-j2ee.server.instance=tomcat80:home=/home/dragneol/App/apache-tomcat-8.0.27
+j2ee.server.home=C:/Program Files/Apache Software Foundation/apache-tomcat-9.0.7
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\apache-tomcat-9.0.7
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=/home/dragneol/.netbeans/8.2/build.properties
+user.properties.file=C:\\Users\\DuongPTHSE62871\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
