finish B3S && view detail project

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@
 /B3Sslot171819/nbproject/private/
 /B3Sslot181920/build/
 /B3Sslot181920/nbproject/private/
+/B3Sslot202122/nbproject/private/
+/B3Sslot202122/build/
+/B3Sslot23/nbproject/private/
+/B3Sslot23/build/
+/Struts2_Advance_XML/nbproject/private/
+/Struts2_Advance_XML/build/
+/Struts2_Advance_Annotation/nbproject/private/
+/Struts2_Advance_Annotation/build/
