--- a/PacificRimRobot/nbproject/project.properties
+++ b/PacificRimRobot/nbproject/project.properties
@@ -39,8 +39,7 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
-    ${file.reference.sqljdbc4-2.0.jar}:\
-    ${libs.jstl.classpath}
+    ${file.reference.sqljdbc4-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
